src/test/resources/de/cd4analysis/cocos/invalid/XXXNoCode1.cd
package de.cd4analysis.cocos;

classdiagram XXXNoCode1_bad {

}